tensorflow/1.10/api_docs/python/tf/keras.md
<div itemscope itemtype="http://developers.google.com/ReferenceObject">
<meta itemprop="name" content="tf.keras" />
<meta itemprop="property" content="__version__"/>
</div>

# Module: tf.keras



Defined in [`tensorflow/keras/__init__.py`](https://www.tensorflow.org/code/tensorflow/keras/__init__.py).

Implementation of the Keras API meant to be a high-level API for TensorFlow.

Detailed documentation and user guides are available at
[keras.io](https://keras.io).

## Modules

[`activations`](../tf/keras/activations.md) module: Built-in activation functions.

[`applications`](../tf/keras/applications.md) module: Keras Applications are canned architectures with pre-trained weights.

[`backend`](../tf/keras/backend.md) module: Keras backend API.

[`callbacks`](../tf/keras/callbacks.md) module: Callbacks: utilities called at certain points during model training.

[`constraints`](../tf/keras/constraints.md) module: Constraints: functions that impose constraints on weight values.

[`datasets`](../tf/keras/datasets.md) module: Keras built-in datasets.

[`estimator`](../tf/keras/estimator.md) module: Keras estimator API.

[`initializers`](../tf/keras/initializers.md) module: Keras initializer classes (soon to be replaced with core TF initializers).

[`layers`](../tf/keras/layers.md) module: Keras layers API.

[`losses`](../tf/keras/losses.md) module: Built-in loss functions.

[`metrics`](../tf/keras/metrics.md) module: Built-in metrics.

[`models`](../tf/keras/models.md) module: Code for model cloning, plus model-related API entries.

[`optimizers`](../tf/keras/optimizers.md) module: Built-in optimizer classes.

[`preprocessing`](../tf/keras/preprocessing.md) module: Keras data preprocessing utils.

[`regularizers`](../tf/keras/regularizers.md) module: Built-in regularizers.

[`utils`](../tf/keras/utils.md) module: Keras utilities.

[`wrappers`](../tf/keras/wrappers.md) module: Wrappers for Keras models, providing compatibility with other frameworks.

## Classes

[`class Model`](../tf/keras/Model.md): `Model` groups layers into an object with training and inference features.

[`class Sequential`](../tf/keras/Sequential.md): Linear stack of layers.

## Functions

[`Input(...)`](../tf/keras/Input.md): `Input()` is used to instantiate a Keras tensor.

## Other Members

`__version__`

